# serializer version: 1
# name: test_number[envoy_eu_batt][number.envoy_1234_reserve_battery_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.envoy_1234_reserve_battery_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Reserve battery level',
    'platform': 'enphase_envoy',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reserve_soc',
    'unique_id': '1234_reserve_soc',
    'unit_of_measurement': '%',
  })
# ---
# name: test_number[envoy_eu_batt][number.envoy_1234_reserve_battery_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Envoy 1234 Reserve battery level',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.envoy_1234_reserve_battery_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.enpower_654321_reserve_battery_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.enpower_654321_reserve_battery_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Reserve battery level',
    'platform': 'enphase_envoy',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reserve_soc',
    'unique_id': '654321_reserve_soc',
    'unit_of_measurement': '%',
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.enpower_654321_reserve_battery_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Enpower 654321 Reserve battery level',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.enpower_654321_reserve_battery_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15.0',
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc1_fixture_cutoff_battery_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.nc1_fixture_cutoff_battery_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Cutoff battery level',
    'platform': 'enphase_envoy',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cutoff_battery_level',
    'unique_id': '654321_relay_NC1_soc_low',
    'unit_of_measurement': None,
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc1_fixture_cutoff_battery_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'NC1 Fixture Cutoff battery level',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.nc1_fixture_cutoff_battery_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc1_fixture_restore_battery_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.nc1_fixture_restore_battery_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Restore battery level',
    'platform': 'enphase_envoy',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'restore_battery_level',
    'unique_id': '654321_relay_NC1_soc_high',
    'unit_of_measurement': None,
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc1_fixture_restore_battery_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'NC1 Fixture Restore battery level',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.nc1_fixture_restore_battery_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '70.0',
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc2_fixture_cutoff_battery_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.nc2_fixture_cutoff_battery_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Cutoff battery level',
    'platform': 'enphase_envoy',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cutoff_battery_level',
    'unique_id': '654321_relay_NC2_soc_low',
    'unit_of_measurement': None,
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc2_fixture_cutoff_battery_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'NC2 Fixture Cutoff battery level',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.nc2_fixture_cutoff_battery_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc2_fixture_restore_battery_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.nc2_fixture_restore_battery_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Restore battery level',
    'platform': 'enphase_envoy',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'restore_battery_level',
    'unique_id': '654321_relay_NC2_soc_high',
    'unit_of_measurement': None,
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc2_fixture_restore_battery_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'NC2 Fixture Restore battery level',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.nc2_fixture_restore_battery_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '70.0',
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc3_fixture_cutoff_battery_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.nc3_fixture_cutoff_battery_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Cutoff battery level',
    'platform': 'enphase_envoy',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cutoff_battery_level',
    'unique_id': '654321_relay_NC3_soc_low',
    'unit_of_measurement': None,
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc3_fixture_cutoff_battery_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'NC3 Fixture Cutoff battery level',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.nc3_fixture_cutoff_battery_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc3_fixture_restore_battery_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.nc3_fixture_restore_battery_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Restore battery level',
    'platform': 'enphase_envoy',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'restore_battery_level',
    'unique_id': '654321_relay_NC3_soc_high',
    'unit_of_measurement': None,
  })
# ---
# name: test_number[envoy_metered_batt_relay][number.nc3_fixture_restore_battery_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'NC3 Fixture Restore battery level',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.nc3_fixture_restore_battery_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '70.0',
  })
# ---
